tests/rustdoc-ui/issue-106213.stderr
error[E0224]: at least one trait is required for an object type
  --> $DIR/issue-106213.rs:4:17
   |
LL | fn use_avx() -> dyn  {
   |                 ^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0224`.
